<resources>
    <string name="app_name">mine</string>
    <string name="휴대전화_기본_사용법">휴대전화_기본_사용법</string>
    <string name="연락">연락</string>
    <string name="인터넷">인터넷</string>
    <string name="설정관리">설정관리</string>
    <string name="도구">도구</string>
    <string name="사진">사진</string>
    <string name="기타">기타</string>
    <string name="전화">전화</string>
    <string name="T전화">T전화</string>
    <string name="연락처">연락처</string>
    <string name="메시지">메시지</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="키패드">키패드</string>
    <string name="최근기록">최근 기록</string>
    <string name="연락처_">연락처</string>
    <string name="플레이스">플레이스</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_9">9</string>
    <string name="전화기능">전화기능</string>
    <string name="call_method">전화 방법을 선택해 주세요</string>
    <string name="번호">번호</string>
    <string name="call_method_hint">call_choice_page_text_hint</string>
    <string name="callNum_here">전화번호입력</string>
    <string name="delete">삭제</string>
    <string name="faceCall">영상통화</string>
</resources>