<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Call">

    <EditText
        android:id="@+id/call_choice_page_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/call_method"
        android:textAlignment="center"
        android:textSize="28sp"
        android:autofillHints="username"
        android:hint="@string/call_method_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/call_choices_page_num_button"
        android:layout_width="269dp"
        android:layout_height="157dp"
        android:layout_margin="50dp"
        android:layout_marginTop="64dp"
        android:text="@string/번호"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_choice_page_title_text" />

    <Button
        android:id="@+id/call_choices_page_callNum_button"
        android:layout_width="270dp"
        android:layout_height="151dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/연락처"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_choices_page_num_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
